# elf-experiments

./: .asm-lsp.toml  .gitattributes  Cargo.toml  Makefile
elfs/: a.c  rodata.s  static.s
specs/: gabi.url  itanium-cxx-abi.url
src/: elf.rs  interner.rs  lib.rs  main.rs  parser.rs  writer.rs
tests/: basics.rs
tests/snapshots/: basics__snapshot.snap
